# flakes

./: README.md
GATK/: flake.nix
VEP/: flake.nix
biovenv/: flake.nix  pyproject.toml
cellranger/: flake.nix
gdc/: flake.nix  result
gsea/: flake.nix
mageck/: flake.nix
mmfastqcount/: flake.nix
ngmerge/: flake.nix
samtools/: flake.nix
tutorial/: flake.nix
varscan2/: flake.nix
